# rust-esp32-weatherdisplay

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.esp32
.cargo/: config.toml
crates/app/: Cargo.toml  extra_includes.h
crates/app/.cargo/: config.toml
crates/app/examples/: esp_ble_provisioning.rs
crates/app/src/: main.rs
