# https://github.com/rust-lang/cargo/issues/7004
# https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target

[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
esp-idf-hal = { version = "0.43.1", default-features = false, features = [
  "std",
  "binstart",
  "native",
] }
esp-idf-svc = { version = "0.48.1", default-features = false, features = [
  "std",
  "binstart",
  "native",
] }
esp-idf-sys = { version = "0.34.1", default-features = false, features = [
  "std",
  "binstart",
  "native",
] }
heapless = "0.8.0"
log = "0.4.21"

[build-dependencies]
embuild = { version = "0.31.4", default-features = false }
